<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailedInfoActivity">

    <Switch
        android:id="@+id/switch_newsletter"
        android:layout_width="267dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/recieve_newsletter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.406"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_php" />

    <CheckBox
        android:id="@+id/check_java"
        android:layout_width="113dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/java"
        app:layout_constraintBottom_toBottomOf="@+id/check_javascript"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.302"
        app:layout_constraintStart_toEndOf="@+id/check_javascript"
        app:layout_constraintTop_toBottomOf="@+id/check_python" />

    <CheckBox
        android:id="@+id/check_python"
        android:layout_width="113dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/python"
        app:layout_constraintBottom_toTopOf="@+id/check_javascript"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.302"
        app:layout_constraintStart_toEndOf="@+id/check_htmlcss" />

    <CheckBox
        android:id="@+id/check_htmlcss"
        android:layout_width="113dp"
        android:layout_height="33dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="19dp"
        android:text="@string/html_css"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_programmingLanguages" />

    <CheckBox
        android:id="@+id/check_javascript"
        android:layout_width="113dp"
        android:layout_height="33dp"
        android:layout_marginStart="60dp"
        android:text="@string/javascript"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_htmlcss" />

    <TextView
        android:id="@+id/text_programmingLanguages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/programming_languages"
        app:layout_constraintStart_toStartOf="@+id/text_lastDiplomaObtained"
        app:layout_constraintTop_toBottomOf="@+id/group_diploma" />

    <TextView
        android:id="@+id/text_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:text="@string/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/check_android"
        android:layout_width="113dp"
        android:layout_height="33dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="8dp"
        android:text="@string/android"
        app:layout_constraintBottom_toBottomOf="@+id/check_php"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.011"
        app:layout_constraintStart_toEndOf="@+id/check_php"
        app:layout_constraintTop_toBottomOf="@+id/check_java" />

    <CheckBox
        android:id="@+id/check_php"
        android:layout_width="113dp"
        android:layout_height="33dp"
        android:layout_marginStart="60dp"
        android:text="@string/php"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_javascript" />

    <TextView
        android:id="@+id/text_lastDiplomaObtained"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:text="@string/last_diploma_obtained"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_summary" /><![CDATA[

    ;
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />







    ]]>

    <Button
        android:id="@+id/button_validate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:onClick="validate"
        android:text="@string/validate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/group_diploma"
        android:layout_width="355dp"
        android:layout_height="29dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_lastDiplomaObtained">


        <RadioButton
            android:id="@+id/radio_bac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bac" />

        <RadioButton
            android:id="@+id/radio_highSchool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/high_school" />

        <RadioButton
            android:id="@+id/radio_Master"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/master" />

        <RadioButton
            android:id="@+id/radio_phd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/phd" />
    </RadioGroup>

    <EditText
        android:id="@+id/text_moreInfo"
        android:layout_width="298dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="@+id/text_tellUsMore"
        app:layout_constraintTop_toBottomOf="@+id/text_tellUsMore" />

    <TextView
        android:id="@+id/text_tellUsMore"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginTop="28dp"
        android:text="@string/tell_us_more_about_you"
        app:layout_constraintStart_toStartOf="@+id/text_programmingLanguages"
        app:layout_constraintTop_toBottomOf="@+id/switch_newsletter" />

</android.support.constraint.ConstraintLayout>